// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StyledButton Snapshots > matches snapshot for default primary button 1`] = `
<button
  style="border-radius: 8px; font-weight: 500; cursor: pointer; transition: all 0.2s ease; opacity: 1; width: auto; outline: none; display: inline-flex; align-items: center; justify-content: center; padding: 12px 16px; font-size: 16px; min-height: 2.5rem; background-color: rgb(59, 130, 246); color: rgb(255, 255, 255);"
>
  Primary Button
</button>
`;

exports[`StyledButton Snapshots > matches snapshot for disabled button 1`] = `
<button
  disabled=""
  style="border-radius: 8px; font-weight: 500; cursor: not-allowed; transition: all 0.2s ease; opacity: 0.6; width: 100%; outline: none; display: inline-flex; align-items: center; justify-content: center; padding: 12px 16px; font-size: 16px; min-height: 2.5rem; background-color: rgb(156, 163, 175); color: rgb(255, 255, 255);"
>
  Disabled Full Width
</button>
`;

exports[`StyledButton Snapshots > matches snapshot for extra small button with right icon 1`] = `
<button
  style="border-radius: 8px; font-weight: 500; cursor: pointer; transition: all 0.2s ease; opacity: 1; width: auto; outline: none; display: inline-flex; align-items: center; justify-content: center; padding: 4px 8px; font-size: 12px; min-height: 1.5rem; background-color: rgb(59, 130, 246); color: rgb(255, 255, 255);"
>
  <span
    style="display: flex; align-items: center; gap: 4px;"
  >
    Download
    <svg
      aria-hidden="true"
      class="lucide lucide-download"
      fill="none"
      height="12"
      stroke="#111827"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      style="width: 12px; height: 12px; color: rgb(17, 24, 39); display: inline-block; vertical-align: middle; flex-shrink: 0; transition: color 0.2s ease;"
      viewBox="0 0 24 24"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 15V3"
      />
      <path
        d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"
      />
      <path
        d="m7 10 5 5 5-5"
      />
    </svg>
  </span>
</button>
`;

exports[`StyledButton Snapshots > matches snapshot for secondary button with icon 1`] = `
<button
  style="border: 1px solid rgb(209, 213, 219); border-radius: 8px; font-weight: 500; cursor: pointer; transition: all 0.2s ease; opacity: 1; width: auto; outline: none; display: inline-flex; align-items: center; justify-content: center; padding: 16px 20px; font-size: 18px; min-height: 3rem; background-color: rgb(255, 255, 255); color: rgb(17, 24, 39);"
>
  <span
    style="display: flex; align-items: center; gap: 4px;"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-search"
      fill="none"
      height="16"
      stroke="#111827"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      style="width: 16px; height: 16px; color: rgb(17, 24, 39); display: inline-block; vertical-align: middle; flex-shrink: 0; transition: color 0.2s ease;"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m21 21-4.34-4.34"
      />
      <circle
        cx="11"
        cy="11"
        r="8"
      />
    </svg>
    Search Button
  </span>
</button>
`;
